Smart contract code parser added

--- a/address_labeling.ipynb
+++ b/address_labeling.ipynb
@@ -31,9 +31,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/eisermann/.local/lib/python3.9/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.2' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "/home/user/eisermann/.local/lib/python3.9/site-packages/pandas/core/arrays/masked.py:59: UserWarning: Pandas requires version '1.3.2' or newer of 'bottleneck' (version '1.2.1' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -49,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,29 +70,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "### set-up ###\n",
+      "### Start work ###\n",
+      "Data written to /local/scratch/exported/governance-erc20/project_erc20_governanceTokens_data/smart_contract_code.csv\n",
+      "### End work ###\n"
+     ]
+    }
+   ],
    "source": [
+    "\"\"\"\n",
+    "The purpose of this script is to collect smart contract code which is neede to classify\n",
+    "a) if we are dealing with an EOA addresss\n",
+    "b) if we are dealing with a multi-sig \n",
+    "c) potentially other identifiable contract\n",
+    "\"\"\"\n",
+    "\n",
+    "\n",
+    "import dotenv\n",
+    "from os.path import join\n",
+    "import csv\n",
+    "env_var = dotenv.dotenv_values()\n",
     "from web3 import Web3, HTTPProvider\n",
     "\n",
-    "df_ua = pd.read_csv(join(path, 'df_unique_addresses2.csv'))\n",
     "\n",
-    "w3 = Web3(Web3.HTTPProvider(os.environ['ETHEREUM_NODE_ENDPOINT']))\n",
+    "print(\"### set-up ###\")\n",
+    "# Set up authentication \n",
+    "path = env_var[\"PROJECT_PATH\"]\n",
+    "w3 = Web3(Web3.HTTPProvider(env_var['INFURA_API_ENDPOINT']))\n",
     "\n",
-    "for a in df_ua.unique_addresses: \n",
+    "# set input & output path\n",
+    "input_path = join(path, 'df_unique_addresses2.csv') \n",
+    "output_path = join(path,'smart_contract_code.csv')\n",
     "\n",
-    "    address = w3.toChecksumAddress(a)\n",
+    "# load input file\n",
+    "df_ua = pd.read_csv(input_path)\n",
     "\n",
-    "    if w3.utilis.isAddress(address):\n",
-    "        if w3.eth.getCode(address) == '0x':\n",
-    "            print(\"This is an EOA.\")\n",
-    "        else:\n",
-    "            print(\"This is a contract.\")\n",
-    "    else:\n",
-    "        print(\"Invalid Ethereum address\")\n",
+    "# Script\n",
+    "print(\"### Start work ###\")\n",
     "\n",
-    "    break"
+    "# Open the CSV file for writing\n",
+    "with open(output_path, \"w\", newline=\"\") as csvfile:\n",
+    "    fieldnames = ['address', 'code']\n",
+    "    writer = csv.DictWriter(csvfile, fieldnames=fieldnames)\n",
+    "    writer.writeheader()\n",
+    "\n",
+    "    for a in df_ua.unique_addresses: \n",
+    "\n",
+    "        address = w3.toChecksumAddress(a)\n",
+    "\n",
+    "        code = w3.eth.getCode(address)\n",
+    "\n",
+    "        writer.writerow({'address': address, 'code':code})\n",
+    "\n",
+    "        break\n",
+    "\n",
+    "\n",
+    "print(f\"Data written to {output_path}\")\n",
+    "print(\"### End work ###\")\n",
+    "\n",
+    "\n"
    ]
   },
   {
