--- a/bipartite_complex_systems_token_network_projections/network_analysis_prep_clean.ipynb
+++ b/bipartite_complex_systems_token_network_projections/network_analysis_prep_clean.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/user/eisermann/.local/lib/python3.9/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.2' currently installed).\n",
+      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
+      "/home/user/eisermann/.local/lib/python3.9/site-packages/pandas/core/arrays/masked.py:59: UserWarning: Pandas requires version '1.3.2' or newer of 'bottleneck' (version '1.2.1' currently installed).\n",
+      "  from pandas.core import (\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -41,21 +52,375 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# remove burner addresses \n",
-    "known_burner_addresses = ['0x0000000000000000000000000000000000000000',\n",
-    "                        '0x0000000000000000000000000000000000000000',\n",
-    "                        '0x0000000000000000000000000000000000000001',\n",
-    "                        '0x0000000000000000000000000000000000000002',\n",
-    "                        '0x0000000000000000000000000000000000000003',\n",
-    "                        '0x0000000000000000000000000000000000000004',\n",
-    "                        '0x0000000000000000000000000000000000000005',\n",
-    "                        '0x0000000000000000000000000000000000000006',\n",
-    "                        '0x0000000000000000000000000000000000000007',\n",
-    "                        '0x000000000000000000000000000000000000dead']"
+    "# load burner addresses \n",
+    "df_know_burner_addresses = pd.read_csv(\"../assets/df_know_burner_addresses.csv\", index_col=0)\n",
+    "known_burner_addresses = list(df_know_burner_addresses.burner_addresses)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address_x</th>\n",
+       "      <th>token_address</th>\n",
+       "      <th>value</th>\n",
+       "      <th>address_checksum</th>\n",
+       "      <th>code</th>\n",
+       "      <th>label</th>\n",
+       "      <th>pct_supply</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e</td>\n",
+       "      <td>-3.000000e+22</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.645237e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x111111111117dc0aa78b770fa6a738034120c302</td>\n",
+       "      <td>-1.500000e+27</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.566566e+15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x1f9840a85d5af5bf1d1762f925bdaddc4201f984</td>\n",
+       "      <td>-1.000000e+27</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-1.541419e+17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x5a98fcbea516cf06857215779fd812ca3bef1b32</td>\n",
+       "      <td>-1.000000e+27</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>-5.820731e+16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x6b3595068778dd592e39a122f4f5a5cf09c90fe2</td>\n",
+       "      <td>-1.828662e+26</td>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.404211e+14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1327927</th>\n",
+       "      <td>0xffffaed177d97e71e3e1a13ce5c36fa72cec5682</td>\n",
+       "      <td>0xc00e94cb662c3520282e6f5717214004a7f26888</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0xfFFfaEd177d97e71e3e1a13cE5C36fA72ceC5682</td>\n",
+       "      <td>b''</td>\n",
+       "      <td>EMOA</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1327928</th>\n",
+       "      <td>0xffffb3b2679b85fc1814b7b0a3d023667b3fb5f5</td>\n",
+       "      <td>0x1f9840a85d5af5bf1d1762f925bdaddc4201f984</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0xFFFfb3b2679B85FC1814b7b0A3d023667B3Fb5F5</td>\n",
+       "      <td>b''</td>\n",
+       "      <td>EMOA</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1327929</th>\n",
+       "      <td>0xffffcaa45ddc381d43eedff9ea19468936f3b93c</td>\n",
+       "      <td>0x1f9840a85d5af5bf1d1762f925bdaddc4201f984</td>\n",
+       "      <td>6.638704e+18</td>\n",
+       "      <td>0xFFfFCaA45Ddc381d43eedfF9EA19468936f3B93C</td>\n",
+       "      <td>b''</td>\n",
+       "      <td>EMOA</td>\n",
+       "      <td>1.023302e+09</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1327930</th>\n",
+       "      <td>0xffffe6c261fac5ea28c41e71672b482efbad8e4b</td>\n",
+       "      <td>0x111111111117dc0aa78b770fa6a738034120c302</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0xFfFFE6c261fAc5ea28C41e71672B482efbAd8e4B</td>\n",
+       "      <td>b''</td>\n",
+       "      <td>EMOA</td>\n",
+       "      <td>-0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1327931</th>\n",
+       "      <td>0xffffffff37d2d839f3b4f7dbb9630463655fc04f</td>\n",
+       "      <td>0x1f9840a85d5af5bf1d1762f925bdaddc4201f984</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0xFfffFfff37D2D839F3b4F7dbb9630463655FC04f</td>\n",
+       "      <td>b''</td>\n",
+       "      <td>EMOA</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1327932 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          address_x  \\\n",
+       "0        0x0000000000000000000000000000000000000000   \n",
+       "1        0x0000000000000000000000000000000000000000   \n",
+       "2        0x0000000000000000000000000000000000000000   \n",
+       "3        0x0000000000000000000000000000000000000000   \n",
+       "4        0x0000000000000000000000000000000000000000   \n",
+       "...                                             ...   \n",
+       "1327927  0xffffaed177d97e71e3e1a13ce5c36fa72cec5682   \n",
+       "1327928  0xffffb3b2679b85fc1814b7b0a3d023667b3fb5f5   \n",
+       "1327929  0xffffcaa45ddc381d43eedff9ea19468936f3b93c   \n",
+       "1327930  0xffffe6c261fac5ea28c41e71672b482efbad8e4b   \n",
+       "1327931  0xffffffff37d2d839f3b4f7dbb9630463655fc04f   \n",
+       "\n",
+       "                                      token_address         value  \\\n",
+       "0        0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e -3.000000e+22   \n",
+       "1        0x111111111117dc0aa78b770fa6a738034120c302 -1.500000e+27   \n",
+       "2        0x1f9840a85d5af5bf1d1762f925bdaddc4201f984 -1.000000e+27   \n",
+       "3        0x5a98fcbea516cf06857215779fd812ca3bef1b32 -1.000000e+27   \n",
+       "4        0x6b3595068778dd592e39a122f4f5a5cf09c90fe2 -1.828662e+26   \n",
+       "...                                             ...           ...   \n",
+       "1327927  0xc00e94cb662c3520282e6f5717214004a7f26888  0.000000e+00   \n",
+       "1327928  0x1f9840a85d5af5bf1d1762f925bdaddc4201f984  0.000000e+00   \n",
+       "1327929  0x1f9840a85d5af5bf1d1762f925bdaddc4201f984  6.638704e+18   \n",
+       "1327930  0x111111111117dc0aa78b770fa6a738034120c302  0.000000e+00   \n",
+       "1327931  0x1f9840a85d5af5bf1d1762f925bdaddc4201f984  0.000000e+00   \n",
+       "\n",
+       "                                   address_checksum code label    pct_supply  \n",
+       "0        0x0000000000000000000000000000000000000000  NaN   NaN  6.645237e+15  \n",
+       "1        0x0000000000000000000000000000000000000000  NaN   NaN  5.566566e+15  \n",
+       "2        0x0000000000000000000000000000000000000000  NaN   NaN -1.541419e+17  \n",
+       "3        0x0000000000000000000000000000000000000000  NaN   NaN -5.820731e+16  \n",
+       "4        0x0000000000000000000000000000000000000000  NaN   NaN  7.404211e+14  \n",
+       "...                                             ...  ...   ...           ...  \n",
+       "1327927  0xfFFfaEd177d97e71e3e1a13cE5C36fA72ceC5682  b''  EMOA  0.000000e+00  \n",
+       "1327928  0xFFFfb3b2679B85FC1814b7b0A3d023667B3Fb5F5  b''  EMOA  0.000000e+00  \n",
+       "1327929  0xFFfFCaA45Ddc381d43eedfF9EA19468936f3B93C  b''  EMOA  1.023302e+09  \n",
+       "1327930  0xFfFFE6c261fAc5ea28C41e71672B482efbAd8e4B  b''  EMOA -0.000000e+00  \n",
+       "1327931  0xFfffFfff37D2D839F3b4F7dbb9630463655FC04f  b''  EMOA  0.000000e+00  \n",
+       "\n",
+       "[1327932 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(join(path,f\"token_balance_lookup_tables_labelled/df_token_balenace_labelled_greater_01pct_bh11659570_v2.csv\"), index_col=0)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for snapshot in df_snapshot[df_snapshot['Block Height'] >= 11547458]['Block Height']:\n",
+    "    \n",
+    "    # read snapshot\n",
+    "    # ddf = pd.read_csv(join(path, 'token_balance_lookup_tables/token_holder_snapshot_balance_14967365.csv'))\n",
+    "    ddf = pd.read_csv(join(path,f\"token_balance_lookup_tables_labelled/df_token_balenace_labelled_greater_01pct_bh{snapshot}_v2.csv\"), index_col=[0])\n",
+    "    ddf = ddf.rename(columns={'address_x': 'address'})\n",
+    "    ddf = \n",
+    "    break "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>address</th>\n",
+       "      <th>token_address</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e</td>\n",
+       "      <td>-3.666600e+22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x0d438f3b5175bebc262bf23753c1e53d03432bde</td>\n",
+       "      <td>-2.727224e+24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x111111111117dc0aa78b770fa6a738034120c302</td>\n",
+       "      <td>-1.500000e+27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x1a4b46696b2bb4794eb3d4c26f1c55f9170fa4c5</td>\n",
+       "      <td>-1.000000e+28</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0x0000000000000000000000000000000000000000</td>\n",
+       "      <td>0x1f9840a85d5af5bf1d1762f925bdaddc4201f984</td>\n",
+       "      <td>-1.000000e+27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3668356</th>\n",
+       "      <td>0xfffffd059e97c2bfc822569e13f636c3d176db41</td>\n",
+       "      <td>0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3668357</th>\n",
+       "      <td>0xfffffd059e97c2bfc822569e13f636c3d176db41</td>\n",
+       "      <td>0x3432b6a60d23ca0dfca7761b7ab56459d9c964d0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3668358</th>\n",
+       "      <td>0xfffffd059e97c2bfc822569e13f636c3d176db41</td>\n",
+       "      <td>0x4e3fbd56cd56c3e72c1403e103b45db9da5b9d2b</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3668359</th>\n",
+       "      <td>0xfffffe88a70d294863d07566d1e1e4e869901557</td>\n",
+       "      <td>0x6810e776880c02933d47db1b9fc05908e5386b96</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3668360</th>\n",
+       "      <td>0xffffffff37d2d839f3b4f7dbb9630463655fc04f</td>\n",
+       "      <td>0x1f9840a85d5af5bf1d1762f925bdaddc4201f984</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3668361 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                            address  \\\n",
+       "0        0x0000000000000000000000000000000000000000   \n",
+       "1        0x0000000000000000000000000000000000000000   \n",
+       "2        0x0000000000000000000000000000000000000000   \n",
+       "3        0x0000000000000000000000000000000000000000   \n",
+       "4        0x0000000000000000000000000000000000000000   \n",
+       "...                                             ...   \n",
+       "3668356  0xfffffd059e97c2bfc822569e13f636c3d176db41   \n",
+       "3668357  0xfffffd059e97c2bfc822569e13f636c3d176db41   \n",
+       "3668358  0xfffffd059e97c2bfc822569e13f636c3d176db41   \n",
+       "3668359  0xfffffe88a70d294863d07566d1e1e4e869901557   \n",
+       "3668360  0xffffffff37d2d839f3b4f7dbb9630463655fc04f   \n",
+       "\n",
+       "                                      token_address         value  \n",
+       "0        0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e -3.666600e+22  \n",
+       "1        0x0d438f3b5175bebc262bf23753c1e53d03432bde -2.727224e+24  \n",
+       "2        0x111111111117dc0aa78b770fa6a738034120c302 -1.500000e+27  \n",
+       "3        0x1a4b46696b2bb4794eb3d4c26f1c55f9170fa4c5 -1.000000e+28  \n",
+       "4        0x1f9840a85d5af5bf1d1762f925bdaddc4201f984 -1.000000e+27  \n",
+       "...                                             ...           ...  \n",
+       "3668356  0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e  0.000000e+00  \n",
+       "3668357  0x3432b6a60d23ca0dfca7761b7ab56459d9c964d0  0.000000e+00  \n",
+       "3668358  0x4e3fbd56cd56c3e72c1403e103b45db9da5b9d2b  0.000000e+00  \n",
+       "3668359  0x6810e776880c02933d47db1b9fc05908e5386b96  0.000000e+00  \n",
+       "3668360  0x1f9840a85d5af5bf1d1762f925bdaddc4201f984  0.000000e+00  \n",
+       "\n",
+       "[3668361 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ddf"
    ]
   },
   {
@@ -109,44 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Token: 0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2 || Herfindahl-Hirschman Index: 394.2610748180453\n",
-      "Token: 0x1f9840a85d5af5bf1d1762f925bdaddc4201f984 || Herfindahl-Hirschman Index: 498.2428580743029\n",
-      "Token: 0xba100000625a3754423978a60c9317c58a424e3d || Herfindahl-Hirschman Index: 481.6896409999161\n",
-      "Token: 0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e || Herfindahl-Hirschman Index: 316.34824788881383\n",
-      "Token: 0xc00e94cb662c3520282e6f5717214004a7f26888 || Herfindahl-Hirschman Index: 1598.1718698403768\n",
-      "Token: 0x111111111117dc0aa78b770fa6a738034120c302 || Herfindahl-Hirschman Index: 8636.572512066232\n",
-      "Token: 0x6b3595068778dd592e39a122f4f5a5cf09c90fe2 || Herfindahl-Hirschman Index: 2167.543471308722\n",
-      "Token: 0x7fc66500c84a76ad7e9c93437bfc5ac33e2ddae9 || Herfindahl-Hirschman Index: 1273.6214889545554\n",
-      "Token: 0xd533a949740bb3306d119cc777fa900ba034cd52 || Herfindahl-Hirschman Index: 2918.41814286187\n",
-      "Token: 0x5a98fcbea516cf06857215779fd812ca3bef1b32 || Herfindahl-Hirschman Index: 1455.6945539106673\n"
-     ]
-    }
-   ],
-   "source": [
-    "def herfindahl_hirschman_index(data):\n",
-    "    squared_market_shares = np.square(data)\n",
-    "    hhi = np.sum(squared_market_shares)\n",
-    "    return hhi\n",
-    "\n",
-    "for token in ddf.token_address.unique(): \n",
-    "    \n",
-    "    pct_supply_data = ddf[ddf.token_address == token].pct_supply*100\n",
-    "    \n",
-    "    hhi_result = herfindahl_hirschman_index(pct_supply_data)\n",
-    "    \n",
-    "    print(f\"Token: {token} || Herfindahl-Hirschman Index:\", hhi_result)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
