--- a/data_collection/token_transfers.ipynb
+++ b/data_collection/token_transfers.ipynb
@@ -34,7 +34,7 @@
     "# RETAINED METHODOLOGICAL DOCUMENTATION\n",
     "\n",
     "# load unique governance tokens transfers \n",
-    "df_tt = pd.read_csv(join( path, 'token_transfers_22021209_refined.csv'))\n",
+    "df_tt = pd.read_csv(join(path, 'token_transfers_22021209_refined.csv'))\n",
     "\n",
     "# unique sender\n",
     "unique_sender = df_tt.from_address.unique()\n",
@@ -50,55 +50,6 @@
     "\n",
     "# convert to csv for storage \n",
     "df_unique_addresses = pd. DataFrame(unique_addresses, columns=['unique_addresses'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# remove burner addresses \n",
-    "known_burner_addresses = ['0x0000000000000000000000000000000000000000',\n",
-    "                        '0x0000000000000000000000000000000000000000',\n",
-    "                        '0x0000000000000000000000000000000000000001',\n",
-    "                        '0x0000000000000000000000000000000000000002',\n",
-    "                        '0x0000000000000000000000000000000000000003',\n",
-    "                        '0x0000000000000000000000000000000000000004',\n",
-    "                        '0x0000000000000000000000000000000000000005',\n",
-    "                        '0x0000000000000000000000000000000000000006',\n",
-    "                        '0x0000000000000000000000000000000000000007',\n",
-    "                        '0x000000000000000000000000000000000000dead']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "df_unique_addresses_filtered = df_unique_addresses[df_unique_addresses.unique_addresses.isin(known_burner_addresses) == False]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# safe dataset as df as csv\n",
-    "df_unique_addresses_filtered.to_csv(join(path, 'df_unique_addresses2.csv') )\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_unique_addresses_filtered = pd.read_csv(join(path, 'df_unique_addresses2.csv' ))\n",
-    "df_unique_addresses_filtered"
    ]
   },
   {
@@ -167,44 +118,7 @@
     "       'transaction_type'# -->\n",
     "       ]\n",
     "\n",
-    "['hash', 'block_number','from_address', 'to_address', 'value', 'gas', 'gas_price', 'input']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for ind, col in enumerate(columns): \n",
-    "    print(f'Col: {col} || Col Num: {ind+1}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ddf_sample_tx = dd.read_csv(join(path,'raw/transactions_to_11286141.csv')) #number of rows 1,622,714,622"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ddf_sample_tx.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# select relevant columns \n"
+    "selected_columns = ['hash', 'block_number','from_address', 'to_address', 'value', 'gas', 'gas_price', 'input']"
    ]
   },
   {
@@ -230,119 +144,6 @@
    "outputs": [],
    "source": [
     "df.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Getting data into Edge List Format\n",
-    "\n",
-    "- Reference: https://networkx.org/documentation/stable/reference/readwrite/edgelist.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx \n",
-    "G = nx.read_edgelist(join(path, file), data=False)\n",
-    "file = 'tx_all_uniq_addresses.edgelist'\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G.number_of_nodes()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from networkit import Graph\n",
-    "import networkit as nk\n",
-    "\n",
-    "g = Graph()\n",
-    "reader = nk.graphio.LineFileReader(path=\"edge_simple_test.txt\")\n",
-    "graph = Graph(reader)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# nk.graphio.EdgeListReader(\"edge_simple_test.txt\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nk.graphio.Format.EdgeListSpaceOne('edge_simple_test.txt')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from networkit import GraphReader\n",
-    "\n",
-    "gr = GraphReader(\"edge_simple_test.txt\")\n",
-    "g = gr.readGraph()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import igraph as ig \n",
-    "\n",
-    "g = ig.Graph.TupleList('edge_simple_test.txt')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import networkx as nx\n",
-    "G = nx.Graph()\n",
-    "G.add_edge(1, 2, weight=7, color=\"red\")\n",
-    "# nx.write_edgelist(G, \"test1.edgelist\", data=[\"color\", \"weight\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "G = nx.read_edgelist(\"test.edgelist\", data=True)\n",
-    "# list(G.edges(data=True))"
    ]
   },
   {
