Link Analysis: Refactoring of code

--- a/notebooks/clique_analysis_visualisation.ipynb
+++ b/notebooks/clique_analysis_visualisation.ipynb
@@ -27,6 +27,8 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
     "from os.path import join\n",
     "import os\n",
     "\n",
@@ -295,18 +297,6 @@
    "source": [
     "# Assuming metric_dataframes is already defined somewhere in your code\n",
     "plot_heatmap_chart(metric_dataframes, metric_name='total_influence', pct=True, log=False, save=True, show=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "671538ff-90ab-44cf-96c0-949200fa12a4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "# ['size_clique', 'total_influence', 'gini_total_influence', 'internal_influence', 'gini_internal_influence', 'external_influence', 'gini_external_influence', 'wealth_clique', 'gini_wealth_clique', 'median_wealth_level_clique', 'median_no_assets_clique', 'max_influence_label', 'max_influence_label_distribution']\n"
    ]
   },
   {
@@ -604,7 +594,7 @@
     }
    ],
    "source": [
-    "plot_heatmap_chart(metric_dataframes, metric_name='wealth_clique', pct=False,log=True, save=True, show=True) "
+    "plot_heatmap_chart(metric_dataframes, metric_name='wealth_clique', pct=False, log=True, save=True, show=True) "
    ]
   },
   {
