sensitivity analysis + minor mod wallet projection

--- a/notebooks/clique_analysis_visualisation_directional.ipynb
+++ b/notebooks/clique_analysis_visualisation_directional.ipynb
@@ -5,7 +5,7 @@
    "id": "91e46743-d009-4d29-b204-44c82a0540c7",
    "metadata": {},
    "source": [
-    "# Clique Analysis Directionnal\n",
+    "# Clique Analysis Directional\n",
     "Conducting a clique analysis of a network graph involves identifying and analyzing the cliques within the graph and the impact on a respective singular token holding metric\n"
    ]
   },
