minor update on wallet projection notebook

--- a/notebooks/wallet_network_projections.ipynb
+++ b/notebooks/wallet_network_projections.ipynb
@@ -7,7 +7,14 @@
    "source": [
     "# Wallet Network Projections Analysis \n",
     "\n",
-    "This Notebook shows general properties of the validated Token network projections"
+    "This Notebook shows general properties of the validated Token network projections. The data was run on supply threshold of 0.01. You can modify this in the wallet_projection_main.py script, by changing the global variable SUPPLY_THRESHOLD. \n",
+    "\n",
+    "Execte the script by running: \n",
+    "```\n",
+    "python wallet_projection_main.py\n",
+    "```\n",
+    "\n",
+    "Ensure the that you have the respective data and directories :) "
    ]
   },
   {
@@ -196,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "f512f0c8",
    "metadata": {},
    "outputs": [],
@@ -247,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "d23cc350",
    "metadata": {},
    "outputs": [
