--- a/notebooks/wallet_network_projections.ipynb
+++ b/notebooks/wallet_network_projections.ipynb
@@ -69,7 +69,7 @@
     "load_dotenv()  \n",
     "\n",
     "path = os.environ['DATA_DIRECTORY']\n",
-    "covalent_key = os.environ['COVALENTHQ_API_KEY']\n",
+    "# covalent_key = os.environ['COVALENTHQ_API_KEY']\n",
     "df_snapshots = pd.read_csv('../data/snapshot_selection.csv')\n",
     "df_snapshots['Date'] = pd.to_datetime(df_snapshots['Date'])  # Ensure dates are in datetime format\n",
     "df_tokens = pd.read_csv(\"../data/final_token_selection.csv\")\n",
@@ -103,6 +103,14 @@
    "source": [
     "## Visualise Network Projection of Snapshot over time"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceee579f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
