--- a/notebooks/sample_descriptives.ipynb
+++ b/notebooks/sample_descriptives.ipynb
@@ -10,35 +10,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "55f2e82e-33ee-457e-ba39-a6e753992053",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/user/eisermann/.local/lib/python3.9/site-packages/pandas/core/computation/expressions.py:20: UserWarning: Pandas requires version '2.7.3' or newer of 'numexpr' (version '2.7.2' currently installed).\n",
-      "  from pandas.core.computation.check import NUMEXPR_INSTALLED\n",
-      "/home/user/eisermann/.local/lib/python3.9/site-packages/pandas/core/arrays/masked.py:59: UserWarning: Pandas requires version '1.3.2' or newer of 'bottleneck' (version '1.2.1' currently installed).\n",
-      "  from pandas.core import (\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from os.path import join\n",
     "import os\n",
-    "import \n",
     "\n",
     "from dotenv import load_dotenv\n",
     "load_dotenv()  \n",
     "\n",
     "# Load environment variables\n",
     "path = os.environ['DATA_DIRECTORY']\n",
-    "TOKEN_BALANCE_TABLE_INPUT_PATH = join(path, \"data/snapshot_token_balance_tables_enriched\")\n",
-    "VALIDATED_PROJECTIONS_INPUT_PATH = join(path, 'data/validated_token_projection_graphs')\n",
+    "TOKEN_BALANCE_TABLE_INPUT_PATH = join(path, \"../data/snapshot_token_balance_tables_enriched\")\n",
+    "VALIDATED_PROJECTIONS_INPUT_PATH = join(path, '../data/validated_token_projection_graphs')\n",
     "\n",
     "\n",
     "covalent_key = os.environ['COVALENTHQ_API_KEY']\n",
@@ -48,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "8ff9607f-5b41-4418-8dd6-e6d3470452b9",
    "metadata": {},
    "outputs": [],
@@ -58,30 +46,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "id": "1b88249d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "token_address                               label                     \n",
+       "0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e  EMOA                          10\n",
+       "                                            IEMOA                         53\n",
+       "                                            PCV                            8\n",
+       "                                            bridge_contract                8\n",
+       "                                            external_staking_contracts     3\n",
+       "                                                                          ..\n",
+       "0xd533a949740bb3306d119cc777fa900ba034cd52  lending_borrowing_contract     1\n",
+       "                                            lp_amm                        47\n",
+       "                                            mining                         1\n",
+       "                                            other_contracts                2\n",
+       "                                            vesting_contract              11\n",
+       "Name: address, Length: 125, dtype: int64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ddf.groupby(['token_address', 'label']).address."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "762c0bc3-5560-4894-989b-0f375c0f2908",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e': 48503,\n",
-       " '0x111111111117dc0aa78b770fa6a738034120c302': 88045,\n",
-       " '0x1a4b46696b2bb4794eb3d4c26f1c55f9170fa4c5': 17932,\n",
-       " '0x1f9840a85d5af5bf1d1762f925bdaddc4201f984': 308753,\n",
-       " '0x4e3fbd56cd56c3e72c1403e103b45db9da5b9d2b': 12244,\n",
-       " '0x5a98fcbea516cf06857215779fd812ca3bef1b32': 15269,\n",
-       " '0x6b3595068778dd592e39a122f4f5a5cf09c90fe2': 96738,\n",
-       " '0x6f40d4a6237c257fff2db00fa0510deeecd303eb': 3907,\n",
-       " '0x7fc66500c84a76ad7e9c93437bfc5ac33e2ddae9': 110673,\n",
-       " '0x92d6c1e31e14520e676a687f0a93788b716beff5': 21504,\n",
-       " '0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2': 83438,\n",
-       " '0xba100000625a3754423978a60c9317c58a424e3d': 41070,\n",
-       " '0xc00e94cb662c3520282e6f5717214004a7f26888': 191794,\n",
-       " '0xd533a949740bb3306d119cc777fa900ba034cd52': 70846}"
+       "{'0x0bc529c00c6401aef6d220be8c6ea1667f6ad93e': np.int64(48502),\n",
+       " '0x111111111117dc0aa78b770fa6a738034120c302': np.int64(88043),\n",
+       " '0x1a4b46696b2bb4794eb3d4c26f1c55f9170fa4c5': np.int64(17932),\n",
+       " '0x1f9840a85d5af5bf1d1762f925bdaddc4201f984': np.int64(308751),\n",
+       " '0x4e3fbd56cd56c3e72c1403e103b45db9da5b9d2b': np.int64(12244),\n",
+       " '0x5a98fcbea516cf06857215779fd812ca3bef1b32': np.int64(15269),\n",
+       " '0x6b3595068778dd592e39a122f4f5a5cf09c90fe2': np.int64(96736),\n",
+       " '0x6f40d4a6237c257fff2db00fa0510deeecd303eb': np.int64(3907),\n",
+       " '0x7fc66500c84a76ad7e9c93437bfc5ac33e2ddae9': np.int64(110672),\n",
+       " '0x92d6c1e31e14520e676a687f0a93788b716beff5': np.int64(21504),\n",
+       " '0x9f8f72aa9304c8b593d555f12ef6589cc3a579a2': np.int64(83436),\n",
+       " '0xba100000625a3754423978a60c9317c58a424e3d': np.int64(41068),\n",
+       " '0xc00e94cb662c3520282e6f5717214004a7f26888': np.int64(191792),\n",
+       " '0xd533a949740bb3306d119cc777fa900ba034cd52': np.int64(70844)}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +586,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -579,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
